Implementado View para Cadastrar Premio em Filme. Não foi possivel validar duplicidade de cadastro.

--- a/WPFVendas/Locadora.csproj
+++ b/WPFVendas/Locadora.csproj
@@ -90,6 +90,7 @@
     <Compile Include="DAL\PremioDAO.cs" />
     <Compile Include="DAL\PremioFilmeDAO.cs" />
     <Compile Include="DAL\ProdutoDAO.cs" />
+    <Compile Include="DAL\SingletonContext.cs" />
     <Compile Include="Migrations\201909170112471_RemovidoTableClienteEFuncionario.cs" />
     <Compile Include="Migrations\201909170112471_RemovidoTableClienteEFuncionario.Designer.cs">
       <DependentUpon>201909170112471_RemovidoTableClienteEFuncionario.cs</DependentUpon>
