--- a/WPFVendas/Locadora.csproj
+++ b/WPFVendas/Locadora.csproj
@@ -16,6 +16,8 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -30,8 +32,6 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -106,6 +106,10 @@
     <Compile Include="Migrations\201909300311325_AddTableComissao.cs" />
     <Compile Include="Migrations\201909300311325_AddTableComissao.designer.cs">
       <DependentUpon>201909300311325_AddTableComissao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201910042328065_DateDevolvidaNull.cs" />
+    <Compile Include="Migrations\201910042328065_DateDevolvidaNull.designer.cs">
+      <DependentUpon>201910042328065_DateDevolvidaNull.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Cliente.cs" />
@@ -198,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909300311325_AddTableComissao.resx">
       <DependentUpon>201909300311325_AddTableComissao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910042328065_DateDevolvidaNull.resx">
+      <DependentUpon>201910042328065_DateDevolvidaNull.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
